removed media query

--- a/src/gridstack.scss
+++ b/src/gridstack.scss
@@ -125,6 +125,7 @@ $animation_speed: .3s !default;
     }
 }
 
+/*
 @media (max-width: 768px) {
     .grid-stack-item {
         position: relative !important;
@@ -137,4 +138,4 @@ $animation_speed: .3s !default;
     }
 
     .grid-stack { height: auto !important; }
-}
+}*/
